Fixed header alignment issues

--- a/src/scss/components/_mobile-header.scss
+++ b/src/scss/components/_mobile-header.scss
@@ -15,7 +15,7 @@ $mobileHeaderZindex: 1000;
 
     .search {
       position: absolute;
-      right: 30px;
+      right: 10px;
     }
   }
 
